--- a/index.html
+++ b/index.html
@@ -29,21 +29,30 @@ The series' other distinguishing trait is its violence. People are killed in man
  <main>
     <h1>Фан сайт по мееднесу</h1>
     <button>READ MORE</button>
+    <a href="about.html"></a>
      <section class="pluses">
     <article class="column">
         <div class="number">
             
         </div>
         <div class="text">
-            <h5></h5>
-            <p></p>
+            <h5>author's bio</h5>
+            <p>He is the creator of Madness Combat. His true name is Matthew D. Jolly.
+
+                krinkles is also a mercenary from the game "Madness Combat Nexus (Classic)"
+
+Krinkels was born on June 4, 1981.
+Krinkels created Madness Marshmallows in 1998 at the age of 17.
+Krinkels has created 16 episodes so far.Krinkels is currently 43 years old. 
+          More info I couldn't found :(</p>
+          <img src="https://static.wikia.nocookie.net/mc-realm/images/2/24/D1Vaf3bX0AAh5Bl.jpg/revision/latest/scale-to-width-down/184?cb=20190416182812" alt="D1Vaf3bX0AAh5Bl">
         </div>
     </article>
 </section>
  </main>
 
 <footer>
-    <p>&copy; 2025</p>
+    <p>Krinkels, 2025</p>
 </footer>
 <script src="script.js" defer></script>
 </body>
