--- a/about.html
+++ b/about.html
@@ -10,13 +10,20 @@
 </head>
 <body class="about">
     <header>
-         <h1>Ігри</h1>  
+         <h1>Сюжет</h1>  
          <nav>
-            <a href="#">Home</a>
-            <a href="#">Product</a>
-            <a href="#">About</a>
-         </nav> 
-         <button>Login</button>
+            <p>As a series, Madness Combat's calling card is its excessive and brutal violence. While early episodes featured general mass violence, elements of horror and science fiction have slowly become more apparent as the series has evolved.
+
+The series chiefly focuses around the main protagonist, Hank J. Wimbleton, and his endeavors of killing his foes. It is established in the second episode that the episodes are set "Somewhere in Nevada."
+Hank J. Wimbleton is the main protagonist of the series. He is allies with Sanford, Deimos and 2BDamned. His main foes include the Sheriff, Jesus, Tricky the Clown, the Auditor, and other units within the Agency Against Hank Wimbleton. In Madness Combat 1 and Madness Redeemer, he looks like an ordinary Madness character, but this changes throughout the series, and he eventually gains his trademark black coat and red sunglasses in later episodes.
+
+Jebediah Christoff
+Dr. Jebadiah Christoff was the first antagonist of the series until Madness Combat 6: Antipathy. He first appeared in Madness Combat 1 alongside Hank. In the early episodes, he works for the Sheriff, but following his death in Madness Combat 3: Avenger he seems to be independent.
+
+Jeb possesses many supernatural abilities, including levitation, the ability to ward off bullets, and the power to resurrect people from the dead as zeds. He was also Hank's most dangerous opponent, having killed him four out of the nine times Hank has died. In his cameo appearance in Antipathy, he has apparently given up violence and was shown passively raking leaves. To date, Jeb has died five times. The opening sequence of Madness Depredation nicknames him "The Savior".
+
+Tricky The Clown
+Tricky has abnormal and superhuman abilities, but only since the events of Madness Depredation. His face paint starts white, but his face turns green when he is resurrected Tricky is a wild card; neither the protagonist nor antagonist, he appears to dislike everyone except for the 1337 Crew and other minor characters. First appearing in Madness Redeemer, Tricky has been featured in almost every Madness Combat animation and short since. Initially a standard character of seemingly little importance, Tricky, over the course of the series, became Hank's most powerful foe. But Hank keeps trying to kill tricky no matter how many times he dies. </p>
     </header>
  <main>
     <h1>Цей сайт про Ігри</h1>
