--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 </head>
 <body class="about">
     <header>
-         <h1>Сюжет</h1>  
+         <h1>Characters</h1>  
          <nav>
             <p>As a series, Madness Combat's calling card is its excessive and brutal violence. While early episodes featured general mass violence, elements of horror and science fiction have slowly become more apparent as the series has evolved.
 
@@ -22,9 +22,22 @@ Dr. Jebadiah Christoff was the first antagonist of the series until Madness Comb
 
 Jeb possesses many supernatural abilities, including levitation, the ability to ward off bullets, and the power to resurrect people from the dead as zeds. He was also Hank's most dangerous opponent, having killed him four out of the nine times Hank has died. In his cameo appearance in Antipathy, he has apparently given up violence and was shown passively raking leaves. To date, Jeb has died five times. The opening sequence of Madness Depredation nicknames him "The Savior".
 
-Tricky The Clown
-Tricky has abnormal and superhuman abilities, but only since the events of Madness Depredation. His face paint starts white, but his face turns green when he is resurrected Tricky is a wild card; neither the protagonist nor antagonist, he appears to dislike everyone except for the 1337 Crew and other minor characters. First appearing in Madness Redeemer, Tricky has been featured in almost every Madness Combat animation and short since. Initially a standard character of seemingly little importance, Tricky, over the course of the series, became Hank's most powerful foe. But Hank keeps trying to kill tricky no matter how many times he dies. </p>
-    </header>
+Tricky The Clown<img src="https://static.wikia.nocookie.net/madnesscombat/images/4/4b/Tricky_emoji.png/revision/latest?cb=20240930054044" decoding="async" loading="lazy" width="54" height="54" class="mw-file-element lazyloaded" data-image-name="Tricky emoji.png" data-image-key="Tricky_emoji.png" data-relevant="0" data-src="https://static.wikia.nocookie.net/madnesscombat/images/4/4b/Tricky_emoji.png/revision/latest?cb=20240930054044">
+Tricky has abnormal and superhuman abilities, but only since the events of Madness Depredation. His face paint starts white, but his face turns green when he is resurrected Tricky is a wild card; neither the protagonist nor antagonist, he appears to dislike everyone except for the 1337 Crew and other minor characters. First appearing in Madness Redeemer, Tricky has been featured in almost every Madness Combat animation and short since. Initially a standard character of seemingly little importance, Tricky, over the course of the series, became Hank's most powerful foe. But Hank keeps trying to kill tricky no matter how many times he dies.
+
+Auditor<img src="https://static.wikia.nocookie.net/madnesscombat/images/8/8c/Miniaud.png/revision/latest?cb=20230804012340" decoding="async" loading="lazy" width="22" height="32" class="mw-file-element lazyloaded" data-image-name="Miniaud.png" data-image-key="Miniaud.png" data-relevant="0" data-src="https://static.wikia.nocookie.net/madnesscombat/images/8/8c/Miniaud.png/revision/latest?cb=20230804012340">
+The Auditor is the main antagonist of the Madness Combat series, first debuting in Madness Combat 7: Consternation and the master of the Improbability Drives.
+The Auditor is also the shadowy figure behind the creation of the A.A.H.W., a covert army founded specifically to kill Hank J. Wimbleton and his allies Sanford and Deimos, who he sees as threats to reality itself because of their endless killing sprees.
+
+Sanford<img src="https://static.wikia.nocookie.net/madnesscombat/images/4/42/Sanford_emoji.png/revision/latest?cb=20240930053759" decoding="async" loading="lazy" width="54" height="54" class="mw-file-element lazyloaded" data-image-name="Sanford emoji.png" data-image-key="Sanford_emoji.png" data-relevant="0" data-src="https://static.wikia.nocookie.net/madnesscombat/images/4/42/Sanford_emoji.png/revision/latest?cb=20240930053759">
+Sanford is the deuteragonist of the Madness Combat series, primarily fighting alongside Deimos. He wears a bandana, black teashades, army-camo pants and has a double helix pattern tattoo on his back.
+
+Deimos<img src="https://static.wikia.nocookie.net/madnesscombat/images/3/39/Deimos_emoji.png/revision/latest?cb=20240930053525" decoding="async" loading="lazy" width="54" height="54" class="mw-file-element lazyloaded" data-image-name="Deimos emoji.png" data-image-key="Deimos_emoji.png" data-relevant="0" data-src="https://static.wikia.nocookie.net/madnesscombat/images/3/39/Deimos_emoji.png/revision/latest?cb=20240930053525">
+Deimos is the tritagonist of the Madness Combat series who usually appears alongside Sanford. He has a bandaged head, wears a headset and visor, and has been seen wearing a vest with a white tank top underneath.
+
+2BDamned
+"Doc", or common alias "2BDamned", is the tetratagonist of the Madness Combat series. He helps Deimos escape from Purgatory in the events of DedmosRebuilt.fla and he helped Hank escape in Madness combat 9.5.</p>
+ </header>
  <main>
     <h1>Цей сайт про Ігри</h1>
 <button>READ MORE</button>
