--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ Krinkels was born on June 4, 1981.
 Krinkels created Madness Marshmallows in 1998 at the age of 17.
 Krinkels has created 16 episodes so far.Krinkels is currently 43 years old. 
           More info I couldn't found :(</p>
-          <img src="https://static.wikia.nocookie.net/mc-realm/images/2/24/D1Vaf3bX0AAh5Bl.jpg/revision/latest/scale-to-width-down/184?cb=20190416182812" alt="D1Vaf3bX0AAh5Bl">
+          <img class="sFlh5c FyHeAf iPVvYb" src="https://uimg.ngfiles.com/profile/1/1534.jpg?f1674229839">
         </div>
     </article>
 </section>
