--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@ Deimos is the tritagonist of the Madness Combat series who usually appears along
  <main>
     <img class="sFlh5c ag2Pqd FyHeAf" src="https:src//encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT9by3AkwkL2g5TH5zTHCS8SMvbAY3SGKAieg&s">
     <h1>Story</h1>
-<p>In this episode, Madness Combat's protagonist, Hank J. Wimbleton, And his antagonist, Jesus, debuts.
+<p style="color: white;">In this episode, Madness Combat's protagonist, Hank J. Wimbleton, And his antagonist, Jesus, debuts.
 
 The animation begins with Hank standing around a tree and a man with a boombox, Playing a version of the Chicken Dance, and a dancing grunt in the background. Hank, goes up to the owner of the boombox to go to grab the boombox but the owner punches him causing him to fall to the ground; Hank becomes angry and beats the boombox man to death. A riot then starts among the other characters in which everyone tries to kill Hank, except the dancing man in the background, who seems oblivious to the violence. Hank manages to kill multiple people, and makes sure they're dead by blowing up their bodies with a frag grenade. 
 After the grenade explodes, Jesus Christ, who distinguishes himself from the rest of the characters with his goatee, long hair and halo, takes on Hank. He turns two of the corpses into zombies with a lightning bolt, which upon contact, not only revives people but also turns their bare skin into a transparent green and make them stronger and more resistant. 
@@ -54,7 +54,7 @@ They give another try at attacking Hank, but then get killed again. When Hank tr
 When Jesus realizes his zombies do not offer enough offensive power, he pushes the bodies away, then decides to summon a cannon and fires a few shots at Hank, which he dodges by ducking and jumping. While trying to shoot hank, Jesus is then caught off guard and then shot by Hank's MAC-10. Several more people begin charging at Hank, who now uses PPKs, knives and a sawed-off shotgun to take them out. After killing all his foes, Hank brings the boombox to him and shoots the dancing man in the background.</p> 
 
 
-<p>Madness Combat 2: Redeemer.
+<p style="color: white;">Madness Combat 2: Redeemer.
 Hank initiates his next massacre by strangling the very first, unsuspecting guardsman with a fiber wire. Through stealth-aimed movement he makes his way to a building's roof, covered with more unaware guards to kill. As Hank advances he guides himself to his goal with a "Sheriff tracker", which appears to be a heartbeat-sensing radar display device for tracking his final victim, the Sheriff. 
 Once he notes the Sheriff is right below him, Hank draws a frag grenade from his pocket and blows a hole into the roof he's standing on for a surprise-attack. The Sheriff, in a sudden rush of panic, flees through the door to his left and fires a shot in Hank's direction while doing so, only to miss him and hit one of his guardsmen. Through swift moves of melee and firearm-violence, Hank finishes off every single retaliating grunt in the room as well as 13 others who enter one by one. Hank advances, armed with a shotgun he took from one of the dead grunts. As Hank passes through the door, Jesus enters unnotedly. 
 
@@ -75,7 +75,7 @@ Hank pins the frightened Sheriff against the wall. While Hank is pointing his du
 Moral: Don't try to shoot the sheriff.</p> 
 
 
-<p>Some MC3.
+<p style="color: white;">Some MC3.
 The scene fades in to a couple of armed guards outside a building. One of the guards, who is smoking a cigarette, heads inside; as he walks inside the building, Hank drops down from a vent behind him and stabs him with two knives. Another grunt walks into the room and is quickly taken out by Hank throwing a knife at his head. The second guard from outside comes in and receives a thrown knife to his stomach. Hank then proceeds to pick up the guard's rifle and his two knives before entering the next room. After stabbing the grunt near the entrance, he throws his knives at the other two men in the room. 
 More grunts enter the room, but Hank takes them down with his rifle. Another grunt takes cover behind a table, but Hank jumps on the table to both kill him and get a height advantage over the grunts entering the room from where Hank entered. He shoots most of them down before running out of ammunition, finishing the last member of the group by throwing his empty rifle at them. He jumps down from the table and picks up his knives to kill the next wave of grunts who enter the room; afterwards, he picks up an axe and continues onward. 
 n the next room, Hank kills a few grunts with his axe before throwing it at a grunt that came from around a corner. Using a knife and a baton, he executes everyone that enters the room before noticing a camera on the wall. The camera is connected to a machine being observed by the Sheriff, with Jesus standing nearby. Clearly unnerved by Hank's swift progress, the Sheriff flips a panel on the machine and presses a button labeled "Improbability Drive". 
