--- a/index.html
+++ b/index.html
@@ -51,6 +51,31 @@ Krinkels has created 16 episodes so far.Krinkels is currently 43 years old.
  </main>
 
 <footer>
+    <div class="unsupported-message">
+	clip-path: shape() not supported. Using fallback polygons. For full experience, use Chrome 135+ or Safari 18.4+
+</div>
+<div class="sun"></div>
+<div class="stars"></div>
+<div class="horizon-glow"></div>
+<div class="container">
+	<div class="wave-group">
+		<div class="wave wave-1"></div>
+		<div class="wave wave-2"></div>
+		<div class="wave wave-3"></div>
+		<div class="wave wave-4"></div>
+		<div class="interference interference-1"></div>
+		<div class="interference interference-2"></div>
+		<div class="interference interference-3"></div>
+	</div>
+</div>
+<footer>
+	<div class="resources-layer">
+		<div class="resources">
+			<a href="https://www.lessrain.com" target="_blank" rel="noopener">Less Rain GmbH</a>
+			<a href="https://codepen.io/luis-lessrain/pen/OPNLwMZ" target="_top">Day-Night Cycle Waves V2</a>
+			<a href="https://codepen.io/collection/vOBVrG" target="_top">Codepen Challenges Collection</a>
+		</div>
+	</div>
     <p>Krinkels, 2025</p>
 </footer>
 <script src="script.js" defer></script>
